# Portfolio

./: .gitignore  .ninja_deps  .ninja_log  CMakeCache.txt  CMakeLists.txt  LICENSE  b.bat  build.ninja  cmake_install.cmake  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  readme.md  tsconfig.json
include/server/: server.h  utils.h
src/: main.c
src/server/: server.c  utils.c
www/: index.html  package-lock.json  package.json  styles.css  tsconfig.json
www/src/: index.html  me.md  notfound.html  script.ts  styles.css
www/src/pkgs/: webcomponent.min.js  zero-md.min.js
www/src/ts/: main.ts  query.ts  state.ts  theme.ts  typewriter.ts
www/src/ts/github/: api.ts  cache.ts  schema.ts
www/src/ts/output/: errors.ts  modal.ts
www/src/ts/render/: cards.ts  sanitize.ts
